demo/traefik-v2/canary/k8s/02-webapp/01-webapp-v1.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapp-v1
  namespace: webapp
  labels:
    app: webapp-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-v1
  template:
    metadata:
      labels:
        app: webapp-v1
    spec:
      containers:
        - name: webapp-v1
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80
          resources:
            limits:
              cpu: 300m
              memory: 150Mi
            requests:
              cpu: 100m
              memory: 50Mi

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-v1
  namespace: webapp
  labels:
    app: webapp-v1
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: webapp-v1
