demo/traefik-v2/canary/k8s/02-webapp/02-ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp
  namespace: webapp
spec:
  entryPoints:
    - web
  # - websecure
  routes:
    - match: Host(`webapp.manuelzapf.io`)
      kind: Rule
      services:
      - name: webapp-v1
        port: 80
  #tls:
   #certResolver: defaults
